# Biometric-Key-Derivation

./: README.md
core/: Cargo.toml  PRODUCTION_READINESS.md
core/benches/: bch_benchmark.rs  full_pipeline_benchmark.rs  quantization_benchmark.rs
core/examples/: enrollment_example.rs  recovery_example.rs
core/src/: error.rs  lib.rs
core/src/bch/: backend.rs  decode.rs  encode.rs  mod.rs  params.rs
core/src/ffi/: android_bridge.rs  ios_bridge.rs  mod.rs  types.rs
core/src/fuzzy_extractor/: enrollment.rs  helper_data.rs  mod.rs  recovery.rs  xor.rs
core/src/hash/: hkdf.rs  mod.rs  sha256.rs
core/src/quantization/: mod.rs  multibit.rs  sign_based.rs  threshold.rs
core/src/utils/: bit_ops.rs  hamming.rs  mod.rs  validation.rs  zeroize.rs
core/tests/: bch_test.rs  cross_platform_test.rs  fuzz_test.rs  fuzzy_extractor_test.rs  hash_test.rs  integration_test.rs  quantization_test.rs  security_test.rs
