[package]
name = "biometric_core"
version = "1.0.0"
edition = "2021"
authors = ["Biometric Key Derivation Team"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# BCH error correction (Linux kernel BCH library bindings)
bchlib-sys = "0.1"

# Cryptographic primitives
ring = { version = "0.17", features = ["std"] }
sha2 = "0.10"
hkdf = "0.12"

# Secure memory handling
zeroize = { version = "1.7", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation
rand = "0.8"

# Constant-time operations
subtle = "2.5"

# Error handling
thiserror = "1.0"

[dev-dependencies]
# Testing only

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"
